--- a/src/components/tooltip/tooltip.css
+++ b/src/components/tooltip/tooltip.css
@@ -11,7 +11,7 @@
   display: inline-block;
   position: relative;
   height: 100%;
-  /* width: 100%; */
+  width: 100%;
 }
 
 /* Absolute positioning */
